# tame-the-weights

./: .gitignore  README.md  assignment.md  main.py  pyproject.toml  requirements.txt
docs/: chat_template_format.md  env_setup.md  fine_tune_persona.md  gguf_and_ollama.md  merging_adapters.md  technical_approach.md
persona_data/: README.md  captain_codebeard.jsonl  captain_codebeard_generated.jsonl  professor_snugglesworth.jsonl  professor_snugglesworth_generated.jsonl  zen_coder.jsonl  zen_coder_generated.jsonl
scripts/: fine_tune_persona.py  generate_persona_data.py  merge_adapter.py  publish_persona_data.py  run_gguf_inference.py  run_merged_inference.py  run_persona_inference.py  upload_adapters.py
